tdf#117904 Don't allow copying signed shapes

Instead just copy the "unsigned" graphic

Change-Id: I5183b0b33be0469dceaace142d73aa403cc32ef2
Reviewed-on: https://gerrit.libreoffice.org/56472
Tested-by: Jenkins
Reviewed-by: Samuel Mehrbrodt <Samuel.Mehrbrodt@cib.de>
(cherry picked from commit 79e434948d65dd9eba150bc986e968bcb3754631)
Reviewed-on: https://gerrit.libreoffice.org/56510
Reviewed-by: Thorsten Behrens <Thorsten.Behrens@CIB.de>